# qttrain

./: .gitignore
flatbutton/: flatbutton.pro  glatbutton.qrc  mainwindow.cpp  mainwindow.h
mywidgets/: flatbutton.cpp  flatbutton.h  labeltabbar.cpp  labeltabbar.h  menuitem.cpp  menuitem.h  tabwidget.cpp  tabwidget.h  toolbar.cpp  toolbar.h
qtcmake/: CMakeLists.txt  Readme.md  mainwindow.ui  windowtest.pro
